8133557: Missing test before a branch when checking for MethodCounters in TemplateTable::branch() on x86

Reviewed-by: kvn, coleenp